Update tests, add asserts to demo, fix bug in get_data, add updates to properties, add commands sent to logging, make it work with Python 2

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 .idea/
 .tox/
+.cache/
 dist/
 build/
 yeelightsunflower.egg-info/
 yeelightsunflower/__pycache__/
 yeelightsunflower.py
+.coverage
+yeelightsunflower/*.pyc
+MANIFEST
