--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,22 @@
 [tox]
-;envlist = py{35}, lint
-envlist = lint
+;envlist = lint
+envlist = py{27,35}, lint
 skip_missing_interpreters = True
 skipsdist = True
 norecursedirs = .tox, build, dist
 
-;[testenv]
+[pytest]
+python_files = tests.py
+ignore = timeout
+
+[testenv]
+deps =
+    pytest
+    coverage
+    pytest-cov
+commands =
+    py.test --ignore=build -v --cov=yeelightsunflower --cov-report=term-missing
+
 [testenv:lint]
 norecursedirs = .tox, build, dist
 basepython = python3
@@ -20,16 +31,6 @@ deps=
 [flake8]
 ignore=F401
 
-[pylint]
-ignore=too-many-arguments
-
 ; pylintrc file content
 [MESSAGE CONTROL]
-disable=R0913
-; R0913 Too many arguments
-
-;basepython = python3
-;ignore_errors = True
-;commands =
-;     flake8
-;     pylint yeelightsunflower
+disable=fixme,too-many-arguments
