Add handling of status and new messages from hub, fix setup.py open function

--- a/tox.ini
+++ b/tox.ini
@@ -20,17 +20,18 @@ commands =
 [testenv:lint]
 norecursedirs = .tox, build, dist
 basepython = python3
-commands=
-    pylint --rcfile=tox.ini yeelightsunflower
-    flake8 yeelightsunflower
 deps=
     flake8
     flake8_docstrings
     pylint
+commands=
+    pylint --rcfile=tox.ini yeelightsunflower
+    flake8 yeelightsunflower
 
 [flake8]
 ignore=F401
+;F401 is 'imported but unused' - for the __init__.py imports
 
-; pylintrc file content
+; pylintrc file content:
 [MESSAGE CONTROL]
 disable=fixme,too-many-arguments
