Remove fast_updates 'test' function, add MANIFEST.in to include README.md in distribution

--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@
 envlist = py{27,35}, lint
 skip_missing_interpreters = True
 skipsdist = True
-norecursedirs = .tox, build, dist
+norecursedirs = .tox, .cache, build, dist
 
 [pytest]
 python_files = tests.py
