Make library thread safe with threading.Lock

--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,10 @@ deps =
     coverage
     pytest-cov
 commands =
-    py.test --ignore=build -v --cov=yeelightsunflower --cov-report=term-missing
+    py.test --ignore=build -v --cov=yeelightsunflower --cov-report=term-missing --cov-config tox.ini
+
+[run]
+omit = yeelightsunflower/tests.py
 
 [testenv:lint]
 norecursedirs = .tox, build, dist
